Fixes a whitespace wrap issue in trait examples

--- a/src/HomeAutio.Mqtt.GoogleHome/wwwroot/css/site.scss
+++ b/src/HomeAutio.Mqtt.GoogleHome/wwwroot/css/site.scss
@@ -63,6 +63,10 @@ a:hover {
     }
 }
 
+.btn.dropdown-toggle {
+  white-space: break-spaces;
+}
+
 .card-header h1,
 .card-header h2,
 .card-header h3,
